--- a/14 th/index.html
+++ b/14 th/index.html
@@ -33,5 +33,15 @@
      <div class="vr2"></div>
     </div>
     <p style="text-align: center; color:whitesmoke">Sweden</p>
+
+
+    <div class="flag-Niger">
+      <div class="orange"></div>
+       <div class="white">
+           <div class="cir"></div>
+       </div>
+       <div class="green"></div>
+    </div>
+    <p style="color:whitesmoke; margin-left:11%;">Niger</p>
 </body>
 </html>
