--- a/16 th/index16.html
+++ b/16 th/index16.html
@@ -10,12 +10,12 @@
 
     <div class="prof-container">
         <div class="pro-content">
-            <img src="download.jpg" class="pro-img" style="height:50%;">
+            <img src="images.jpg" class="pro-img" style="height:50%;">
             <div class="pro-details">
                 <h2>Sarfraz Khan</h2>
-                <h2>sar@215dK</h2>
+                <h3>saf121@</h3>
                 <p>I'm future Billionaire in world.</p>
-                <button class="button">Edit Profile</button>
+                <button class="but">Edit Profile</button>
             </div>
         </div>
     </div>
