1 project is Done using DOM

--- a/23 th/index23.html
+++ b/23 th/index23.html
@@ -9,8 +9,16 @@
 <!-- Div for cards -->
  
 <div class="cards">
-    
+    <img src="car.jpg" alt="car image">
+    <h1>Drive on me</h1>
+    <h5 id="car1">Stranger</h5>
+    <!-- For the Button's -->
+    <div class="btn-container">
+        <!-- <button id="remove">Remove</button> -->
+        <button id="add">Add Friend</button>
+    </div>
 </div>
-    <script src="script.js"></script>
+
+   <script src="script.js"></script>
 </body>
-</html>
+</html> 
