--- a/24 th/index24.html
+++ b/24 th/index24.html
@@ -14,16 +14,16 @@
                 <div class="img-wrapper">
                     <img src="1.jpg" alt="prof-pic" class="img" style="height: 230px; width:230px;">
                 </div>
-                <p>John</p>
+                <p>Walker</p>
             </li>
         </ul>
         <!-- 2 Photo -->
         <ul class="stories-menu">
             <li class="story">
                 <div class="img-wrapper">
-                    <img src="3.jpg" alt="prof-pic" class="img">
+                    <img src="3.jpg" alt="prof-pic" class="img" >
                 </div>
-                <p></p>
+                <p>Silent Eyes</p>
             </li>
         </ul>
         <!-- 3 photo -->
@@ -32,7 +32,7 @@
                 <div class="img-wrapper">
                     <img src="2.jpg" alt="prof-pic" class="img">
                 </div>
-                <p>John</p>
+                <p>Rayan</p>
             </li>
         </ul>
     </div>
