--- a/24 th/index24.html
+++ b/24 th/index24.html
@@ -7,21 +7,23 @@
 </head>
 
 <body>
+    <h1>Instagram Story Bar's</h1>
     <div class="container">
+       
         <!-- 1 Photo -->
         <ul class="stories-menu">
             <li class="story">
                 <div class="img-wrapper">
-                    <img src="1.jpg" alt="prof-pic" class="img" style="height: 230px; width:230px;">
+                    <img src="1.jpg" alt="prof-pic" class="img" style="height: 230px; width:230px; background:linear-gradient(to top right, var(--grade1), var(--grade2), var(--grade3), var(--grade4), var(--grade5));">
                 </div>
                 <p>Walker</p>
             </li>
         </ul>
         <!-- 2 Photo -->
-        <ul class="stories-menu">
+        <ul class="stories-menu live">
             <li class="story">
                 <div class="img-wrapper">
-                    <img src="3.jpg" alt="prof-pic" class="img" >
+                    <img src="3.jpg" alt="prof-pic" class="img" id="center" >
                 </div>
                 <p>Silent Eyes</p>
             </li>
@@ -30,14 +32,12 @@
         <ul class="stories-menu">
             <li class="story">
                 <div class="img-wrapper">
-                    <img src="2.jpg" alt="prof-pic" class="img">
+                    <img src="2.jpg" alt="prof-pic" class="img" style="background:linear-gradient(to top right, var(--grade1), var(--grade2), var(--grade3), var(--grade4), var(--grade5));">
                 </div>
                 <p>Rayan</p>
             </li>
         </ul>
     </div>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
